test/compile-fail/identifier/impl-path-segment-keyword/top.rhdl
struct a {}
impl a {
    fn r#super() {}
}
